--- a/src/ruler.scss
+++ b/src/ruler.scss
@@ -18,7 +18,6 @@ $toolButtonBG: #444444;
     user-select: none;
     padding-bottom: 4px;
     .header {
-      display: block;
       font-size: 1em;
       font-weight: bold;
       left: 0;
@@ -30,7 +29,24 @@ $toolButtonBG: #444444;
       color: $headerColor;
       padding: 2px 0 0 5px;
       cursor: pointer;
-
+      display: block;
+    }
+    .toggle {
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      color: $headerColor;
+      position: absolute;
+      right: 2px;
+      top: 2px;
+      line-height: 10px;
+      text-align: center;
+      cursor: pointer;
+      transform: rotate(-90deg);
+      transition: all 300ms;
+    }
+    .toggle.collapsed {
+      transform: rotate(0deg);
     }
   }
   .tools {
@@ -79,8 +95,8 @@ $toolButtonBG: #444444;
     height: 1px;
     border: none;
     cursor: row-resize;
-    .label{
-      margin-left:0;
+    .label {
+      margin-left: 0;
       margin-top: -.7em;
 
     }
@@ -93,8 +109,8 @@ $toolButtonBG: #444444;
     width: 1px;
     border: none;
     cursor: col-resize;
-    .label{
-      margin-left:-1em;
+    .label {
+      margin-left: -1em;
       margin-top: 1em;
     }
   }
@@ -107,7 +123,7 @@ $toolButtonBG: #444444;
     height: 100px;
     cursor: move;
     border: 1px solid;
-    .label{
+    .label {
       margin-top: -1.4em;
     }
   }
