--- a/src/ruler.scss
+++ b/src/ruler.scss
@@ -7,6 +7,12 @@ $toolButtonBG: #444444;
 #chrome-ruler {
   font-size: 10px;
   font-family: "Lucida Grande", "Trebuchet MS", sans-serif;
+  position: absolute;
+  left: 0;
+  top:0;
+  z-index: 99999999999;
+  width: 100%;
+  height: 100%;
   .toolbox, .layers, .props {
     min-width: 74px;
     position: absolute;
@@ -183,6 +189,7 @@ $toolButtonBG: #444444;
   }
   .props {
     left: 200px;
+    min-width: 160px;
     table {
       width: 160px;
       color: #cccccc;
