--- a/src/ruler.scss
+++ b/src/ruler.scss
@@ -79,10 +79,21 @@ $toolButtonBG: #444444;
   .item:hover .label {
     display: inline-block;
   }
+  .item.resizable{}
   .item {
     box-sizing: border-box;
     position: absolute;
     user-select: none;
+    &.resizable{
+      div[class^=rs-]{
+        width: 5px;
+        height: 5px;
+        border: #000 1px solid;
+        background-color: #ffffff;
+        position: absolute;
+        display: block;
+      }
+    }
     .label {
       border-radius: 2px;
       line-height: 1em;
@@ -93,7 +104,13 @@ $toolButtonBG: #444444;
       position: absolute;
       font-size: .8em;
     }
+    div[class^=rs-]{
+      display: none;
+    }
 
+
+    .rs-n,.rs-s{      cursor: ns-resize;    }
+    .rs-e,.rs-w{      cursor: ew-resize;    }
   }
   .hr {
 
@@ -137,6 +154,17 @@ $toolButtonBG: #444444;
   }
   .item.circle {
     border-radius: 50%;
+  }
+  .item.text{
+    display: inline-block;
+    min-width: 60px;
+    height: auto;
+    .editable{
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+
   }
   .layers {
     min-width: 160px;
