--- a/src/ruler.scss
+++ b/src/ruler.scss
@@ -129,9 +129,10 @@ chrome-ruler {
 
   tools {
     // max-width: 72px;
-    margin: 5px;
+    margin-left: 5px;
     display: inline-block;
     width: 100%;
+
     tool-button {
       width: 32px;
       height: 32px;
@@ -173,7 +174,6 @@ chrome-ruler {
         border: #000 1px solid;
         background-color: #ffffff;
         position: absolute;
-        display: block;
       }
     }
     .label {
@@ -252,13 +252,15 @@ chrome-ruler {
     display: block;
     width: 100px;
     height: 100px;
-    cursor: move;
     border: 1px solid;
     .label {
       margin-top: -1.4em;
     }
   }
+  circle.resizable,square.resizable{
 
+    cursor: move;
+  }
   circle {
     border-radius: 50%;
   }
@@ -340,7 +342,7 @@ chrome-ruler {
       display: inline-block;
       color: #cccccc;
       font-size: 10px;
-      margin: 0;
+      margin: 0 4px;
       props-tr {
         display: flex;
         flex-direction: row;
@@ -349,6 +351,29 @@ chrome-ruler {
           flex-grow: 1;
           min-width: 20px;
         }
+        label.color-picker{
+          display: block;
+          width: 10px;
+          height: 10px;
+          border: $toolButtonColor 1px solid;
+          overflow: hidden;
+          &:after{
+
+          }
+          &.bg{
+            background-color: pink;
+          }
+          &.border{
+            border: pink 1px solid;
+          }
+          input[type=color]{
+            display: inline;
+            width: 100%;
+            height: 100%;
+            opacity: 1;
+            transform: translateX(-100%);
+          }
+        }
       }
       input[type="text"] {
         border: none !important;
@@ -356,9 +381,9 @@ chrome-ruler {
         color: #cccccc !important;
         //width: 100%;
         font-size: 10px !important;
-        display: inline !important;
+       // display: inline !important;
         width: 30px !important;
-        float: left !important;
+       // float: left !important;
       }
     }
   }
